results/SpecGenBench/2-shot/log-CanConstruct-2023_11_05_22_50_33.txt
class CanConstruct {
    //@ requires ransomNote != null && magazine != null;
    //@ ensures \result == false <==> ransomNote.length() > magazine.length();
    //@ ensures \result == true <==> (\forall int i; 0 <= i && i < 26; cnt[i] >= 0);
    public boolean canConstruct(String ransomNote, String magazine) {
        if (ransomNote.length() > magazine.length()) {
            return false;
        }
        int[] cnt = new int[26];
        //@ loop_invariant 0 <= i && i <= magazine.length();
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[magazine.charAt(j) - 'a'] == (\old(cnt[magazine.charAt(j) - 'a']) + 1));
        //@ decreases magazine.length() - i;
        for (int i = 0; i < magazine.length(); i++) {
            cnt[magazine.charAt(i) - 'a']++;
        }
        //@ loop_invariant 0 <= i && i <= ransomNote.length();
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] == (\old(cnt[ransomNote.charAt(j) - 'a']) - 1));
        //@ decreases ransomNote.length() - i;
        for (int i = 0; i < ransomNote.length(); i++) {
            cnt[ransomNote.charAt(i) - 'a']--;
            if(cnt[ransomNote.charAt(i) - 'a'] < 0) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:4: error: cannot find symbol
    //@ ensures \result == true <==> (\forall int i; 0 <= i && i < 26; cnt[i] >= 0);
                                                                       ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:11: error: cannot find symbol
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[magazine.charAt(j) - 'a'] == (\old(cnt[magazine.charAt(j) - 'a']) + 1));
                                                                                                   ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:17: error: cannot find symbol
        //@ loop_invariant (\forall int j; 0 <= j && j < i; cnt[ransomNote.charAt(j) - 'a'] == (\old(cnt[ransomNote.charAt(j) - 'a']) - 1));
                                                                                                     ^
  symbol:   variable cnt
  location: class CanConstruct
3 errors

